--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <body>
 
 <div class="container" id="authSection">
+  <h1 class="text-center text-success mb-3">EcoTrack</h1>
   <img src="https://images.unsplash.com/photo-1508780709619-79562169bc64" class="eco-banner" alt="Eco banner"/>
   <h2>Login / Register</h2>
   <input type="text" class="form-control my-2" id="username" placeholder="Username" required />
@@ -244,5 +245,6 @@
 
 </body>
 </html>
+
 
 
